samples/_failures_safe/1761361645_30cc51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6b98591.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_d6b98591.c:132:9: error: missing terminating " character
  132 |         "
      |         ^
./samples/SAFE/__tmp_d6b98591.c:132:9: error: expected expression at end of input
./samples/SAFE/__tmp_d6b98591.c:132:9: error: expected declaration or statement at end of input
